Fix alignment issue in Hero component

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -11,7 +11,6 @@
   height: 100%;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   margin-top: 8rem;
   padding-bottom: 4rem;
 }
@@ -98,7 +97,9 @@
 @media (max-width: 688px) {
   .profile > img {
     width: 250px;
-
+  }
+  .header-container {
+    margin-top: 2rem;
   }
 }
 
